[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "fde"
version = "0.1.0"
description = "Fixed Dimensional Encoding library for point clouds"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["point cloud", "fixed dimensional encoding", "chamfer similarity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy",
    "pybind11>=2.6.0",
]
